--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
       // Whitelist: either provide a file named
       //   ./whitelist.json  -> ["allowed@mail.com", ...]
       // or edit the fallback array below.
-      const FALLBACK_WHITELIST = ["shashwatraj98765@gmail.com"]; // ← change or leave empty if using file
+      const FALLBACK_WHITELIST = ["shashwatraj98765@gmail.com", "agridoot.novosedge@gmail.com"]; // ← change or leave empty if using file
 
       /*************************
        * Utilities
@@ -663,3 +663,4 @@
     </script>
   </body>
 </html>
+
